# diffuser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/diffuser/: SKILL.md
src/diffuser/: __init__.py  parse.py  render.py  skill.py
tests/: test_parse.py  test_render.py
